[package]
name = "astryx"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "astryx"

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = { version = "0.30.0", features = ["token-2022"] }
spl-token-2022 = { version = "0.9", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.6"
spl-type-length-value = "0.4"
pyth-sdk-solana = "0.9"          # volatility oracle
switchboard-v2 = "0.5"           # multi-oracle consensus
solana-program = "^1.18"
serde = { version = "1.0", features = ["derive"] }
borsh = "1.0"

[features]
no-entrypoint = []
no-idl = []
cpi = []
default = []
